src/index.css
@import 'tailwindcss';
@import '@fontsource/raleway/latin-400.css';
@import '@fontsource/raleway/latin-600.css';
@import '@fontsource/raleway/latin-800.css';

@custom-variant dark (&:is(.dark *));

:root {
  --background: 191 0% 95%;
  --foreground: 191 0% 0%;
  --card: 191 0% 90%;
  --card-foreground: 191 0% 10%;
  --popover: 191 0% 95%;
  --popover-foreground: 191 95% 0%;
  --primary: 191 100% 28.4%;
  --primary-foreground: 0 0% 100%;
  --secondary: 191 10% 70%;
  --secondary-foreground: 0 0% 0%;
  --muted: 153 10% 85%;
  --muted-foreground: 191 0% 35%;
  --accent: 153 10% 80%;
  --accent-foreground: 191 0% 10%;
  --destructive: 0 50% 30%;
  --destructive-foreground: 191 0% 90%;
  --border: 191 20% 50%;
  --input: 191 20% 18%;
  --ring: 191 100% 28.4%;
  --radius: 0.5rem;
}
.dark {
  --background: 191 10% 5%;
  --foreground: 191 0% 90%;
  --card: 191 0% 0%;
  --card-foreground: 191 0% 90%;
  --popover: 191 10% 5%;
  --popover-foreground: 191 0% 90%;
  --primary: 191 100% 28.4%;
  --primary-foreground: 0 0% 100%;
  --secondary: 191 10% 10%;
  --secondary-foreground: 0 0% 100%;
  --muted: 153 10% 15%;
  --muted-foreground: 191 0% 60%;
  --accent: 153 10% 15%;
  --accent-foreground: 191 0% 90%;
  --destructive: 0 50% 30%;
  --destructive-foreground: 191 0% 90%;
  --border: 191 20% 18%;
  --input: 191 20% 18%;
  --ring: 191 100% 28.4%;
  --radius: 0.5rem;
}

@theme inline {
  --color-background: hsl(var(--background));
  --color-foreground: hsl(var(--foreground));
  --color-card: hsl(var(--card));
  --color-card-foreground: hsl(var(--card-foreground));
  --color-popover: hsl(var(--popover));
  --color-popover-foreground: hsl(var(--popover-foreground));
  --color-primary: hsl(var(--primary));
  --color-primary-foreground: hsl(var(--primary-foreground));
  --color-secondary: hsl(var(--secondary));
  --color-secondary-foreground: hsl(var(--secondary-foreground));
  --color-muted: hsl(var(--muted));
  --color-muted-foreground: hsl(var(--muted-foreground));
  --color-accent: hsl(var(--accent));
  --color-accent-foreground: hsl(var(--accent-foreground));
  --color-destructive: hsl(var(--destructive));
  --color-destructive-foreground: hsl(var(--destructive-foreground));
  --color-border: hsl(var(--border));
  --color-input: hsl(var(--input));
  --color-ring: hsl(var(--ring));
  --color-chart-1: hsl(var(--chart-1));
  --color-chart-2: hsl(var(--chart-2));
  --color-chart-3: hsl(var(--chart-3));
  --color-chart-4: hsl(var(--chart-4));
  --color-chart-5: hsl(var(--chart-5));
  --color-sidebar: hsl(var(--sidebar));
  --color-sidebar-foreground: hsl(var(--sidebar-foreground));
  --color-sidebar-primary: hsl(var(--sidebar-primary));
  --color-sidebar-primary-foreground: hsl(var(--sidebar-primary-foreground));
  --color-sidebar-accent: hsl(var(--sidebar-accent));
  --color-sidebar-accent-foreground: hsl(var(--sidebar-accent-foreground));
  --color-sidebar-border: hsl(var(--sidebar-border));
  --color-sidebar-ring: hsl(var(--sidebar-ring));

  --font-sans: 'Raleway', sans-serif;
}

@layer base {
  h1 {
    @apply font-sans text-5xl font-extrabold text-primary uppercase md:text-6xl;
  }

  h2 {
    @apply mb-4 w-fit text-3xl font-semibold text-primary capitalize;
  }

  h3 {
    @apply text-xl font-semibold capitalize;
  }
}

@layer base {
  * {
    @apply scroll-smooth border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

